<resources>
    <string name="app_name">App with Application Loading Status</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide">Glide - Image Loading Library by Bump Tech</string>
    <string name="load_app">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="please_select_file">Please select the file to download</string>
    <string name="please_allow_notifications">Please allow this app to send notifications!</string>


    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_notification_channel_name" translatable="false">Downloads</string>

    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="success_status">Success</string>
    <string name="failure_status">Failure</string>

    <string name="notification_button_name">Click here to see your downloaded file.</string>


</resources>
